Update with postdoc info

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Dakota Folmsbee"
   avatar           : "/assets/images/dlf.png"
-  bio              : "Chemistry Graduate Student at the University of Pittsburgh"
+  bio              : "Postdoctoral Fellow at the University of Pittsburgh"
   location         : "Pittsburgh, PA"
   email            : "dfolmsbee@gmail.com"
   links:
