Updated Conferences and Pubs

--- a/_config.yml
+++ b/_config.yml
@@ -109,13 +109,16 @@ analytics:
 author:
   name             : "Dakota Folmsbee"
   avatar           : "/assets/images/dlf.png"
-  bio              : "Postdoctoral Fellow at the University of Pittsburgh"
+  bio              : "Postdoctoral Scholar at the University of Pittsburgh"
   location         : "Pittsburgh, PA"
   email            : "dfolmsbee@gmail.com"
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/dlf57"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "www.linkedin.com/in/dakota-folmsbee-b610645a"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/folmsbeedak"
@@ -132,6 +135,9 @@ footer:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/folmsbeedak"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "www.linkedin.com/in/dakota-folmsbee-b610645a"
 
 
 # Reading Files
