--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ author:
       url: "https://github.com/dlf57"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "www.linkedin.com/in/dakota-folmsbee-b610645a"
+      url: "https://www.linkedin.com/in/dakota-folmsbee-b610645a"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/folmsbeedak"
@@ -137,7 +137,7 @@ footer:
       url: "https://twitter.com/folmsbeedak"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "www.linkedin.com/in/dakota-folmsbee-b610645a"
+      url: "https://www.linkedin.com/in/dakota-folmsbee-b610645a"
 
 
 # Reading Files
