Add Universal DH, Certificates page, Clean Up layours

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@ main:
     url: /research/
   - title: "Publications"
     url: /publications/
+  - title: "Certificates"
+    url: /certificates/
   - title: "Projects"
     url: /projects/
   # - title: "Resume"
