--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dark" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    :  "dark" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -77,7 +77,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : google-site-verification=e8srX9fR5O2O8eK7G87Zyo-SP_EEt01u6wIywqT52KE
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Dakota Folmsbee"
   avatar           : "/assets/images/dlf.png"
-  bio              : "Computational Chemist/Materials Scientist/Data Scientist"
+  bio              : "Computational Chemist<br>Materials Scientist<br>Data Scientist"
   location         : "Longmont, CO"
   email            : "dfolmsbee@gmail.com"
   links:
