--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-# theme                  : "minimal-mistakes-jekyll"
+theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    :  "dark" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Dakota Folmsbee"
   avatar           : "/assets/images/dlf.png"
-  bio              : "Computational Chemist<br>Materials Scientist<br>Data Scientist"
+  bio              : "Computational Chemist<br>Data Scientist<br>Materials Scientist"
   location         : "Longmont, CO"
   email            : "dfolmsbee@gmail.com"
   links:
